# Diary_agent

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.codex/: skill_proposal_entity_ambiguity.json
.codex/agents/: diary-fast.toml
.tmp/: 283b14ee-preview-followups.json  283b14ee-preview-goals.json  283b14ee-preview-links.json  283b14ee-preview-segments.json
data/: diary.sqlite3
data/backups/: diary-20260713-145345.sha256  diary-20260713-145345.sqlite3  diary-20260719-091941.sha256  diary-20260719-091941.sqlite3
data/drafts/: 283b14ee-fde7-4bb4-9e76-35bbf47eada1.json  2a54ffb3-4bda-4ba5-b98e-3c04444e9945.json  (+4 more)
diary_agent/: __init__.py  cli.py  core.py
memory/: cleaning-style.md  goals.md  skill-change-history.md  skill-proposal-01d618c9-f217-4179-858c-fa3f90eccad8.json  skill-proposal-1db04382-3176-4f97-bd87-801183ea687d.json  skill-proposal-1f82b075-dbba-45ae-b079-73ca8a5dbbf9.json  skill-proposal-202ac50a-766e-4d4b-b31b-18bff74ed798.json  skill-proposal-2dfc218a-9b42-4073-bed1-16e0f7fcef7f.json  skill-proposal-36f2c5ce-5aa3-43f8-aa44-630e79597b39.json  skill-proposal-42d8bcd7-677c-4e9c-a22c-0b525b893651.json  skill-proposal-46e28adc-7ae8-4249-8a54-3afde6aa8d72.json  skill-proposal-6fa16682-936f-434d-8529-5eec6777237a.json  skill-proposal-89be218d-cc20-4008-8169-7e76cd46dbb9.json  skill-proposal-8fb5d6cd-6826-4885-b1b7-564bcb967753.json  skill-proposal-d4f71103-b475-4147-9d6b-746d25cc7f9e.json  skill-proposal-e27ab7a2-0c94-499e-99b8-aa43075d5f25.json  workflow-decisions.md  workflow-feedback.md
tests/: test_core.py
(+141 files in other folders)
