[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "diary-agent"
version = "0.1.0"
description = "Local-first Codex diary storage and retrieval core"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
diary-agent = "diary_agent.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

